update pom.xml and testng xml file