@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.7.1</version>
+			<version>7.10.2</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- use to istablish connection with the database -->
@@ -159,7 +159,7 @@
 							<version>3.0.0-M7</version>
 							<configuration>
 								<suiteXmlFiles>
-									<suiteXmlFile>test-output/testng.xml</suiteXmlFile>
+									<suiteXmlFile></suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
@@ -167,17 +167,7 @@
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-compiler-plugin</artifactId>
 							<version>3.8.1</version>
-							<configuration>
-								<compilerArgs>
-									<arg>--add-opens</arg>
-									<arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-								</compilerArgs>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-surefire-plugin</artifactId>
-							<version>2.22.2</version>
+							<configuration></configuration>
 						</plugin>
 					</plugins>
 				</pluginManagement>
